hotfix: Fix button spacing.

--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -245,7 +245,7 @@ code {
 .backtotop {
     text-align: center;
     width: 100%;
-    margin: 0 0 10px;
+    margin: 0 0 2px;
 
     a {
         display: block;
